bug: 51946 - Text in outgoing filter warning dialog should wrap
Apply max width for confirmation dialogs

http://bugzilla.zimbra.com/show_bug.cgi?id=51946

Copied from Perforce
 Change: 255118

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -703,6 +703,10 @@
 	@BoxPadding@
 }
 
+/* Outer container for the confirmation dialog */
+.DwtConfirmDialog {
+	max-width: 400px;
+}
 
 /* Font for confirmation dialogs ('Are you sure you want to delete?') */
 .DwtConfirmDialogQuestion {
